--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1034,6 +1034,19 @@
       "templates": "Templates",
       "stats": "Statistics"
     },
+    "number": "Contract Number",
+    "title": "Title",
+    "type": "Type",
+    "value": "Value",
+    "status": "Status",
+    "signatureStatus": "Signature Status",
+    "startDate": "Start Date",
+    "endDate": "End Date",
+    "createdAt": "Created At",
+    "description": "Description",
+    "terms": "Terms",
+    "template": "Template",
+    "creator": "Creator",
     "fields": {
       "contract_number": "Contract Number",
       "title": "Title",
@@ -1062,7 +1075,9 @@
       "signer_email": "Signer Email",
       "signer_title": "Signer Title",
       "signature_type": "Signature Type",
-      "signed_at": "Signed At"
+      "signed_at": "Signed At",
+      "ip_address": "IP Address",
+      "user_agent": "User Agent"
     },
     "types": {
       "employment": "Employment",
@@ -1072,7 +1087,7 @@
       "vendor": "Vendor",
       "other": "Other"
     },
-    "status": {
+    "statuses": {
       "draft": "Draft",
       "pending": "Pending",
       "active": "Active",
@@ -1080,15 +1095,43 @@
       "terminated": "Terminated",
       "completed": "Completed"
     },
-    "signature_status": {
+    "signatureStatuses": {
       "unsigned": "Unsigned",
       "partially_signed": "Partially Signed",
       "fully_signed": "Fully Signed"
     },
-    "signature_types": {
+    "signatureTypes": {
       "digital": "Digital",
       "electronic": "Electronic",
       "handwritten": "Handwritten"
+    },
+    "party": {
+      "primary": "Primary Party",
+      "secondary": "Secondary Party",
+      "name": "Party Name",
+      "type": "Party Type",
+      "email": "Party Email",
+      "phone": "Party Phone",
+      "company": "Company",
+      "representative": "Representative",
+      "address": "Address",
+      "types": {
+        "client": "Client",
+        "vendor": "Vendor",
+        "partner": "Partner",
+        "employee": "Employee"
+      }
+    },
+    "template": {
+      "name": "Template Name",
+      "type": "Template Type",
+      "description": "Template Description",
+      "content": "Template Content",
+      "status": "Template Status"
+    },
+    "creator": {
+      "name": "Creator Name",
+      "email": "Creator Email"
     },
     "stats": {
       "total": "Total Contracts",
@@ -1114,17 +1157,14 @@
     "sections": {
       "parties": "Contract Parties"
     },
-    "party": {
-      "primary": "Primary Party",
-      "secondary": "Secondary Party"
-    },
     "detail": {
       "title": "Contract Details",
-      "basic_info": "Basic Information",
+      "basicInfo": "Basic Information",
       "template_info": "Template Information",
       "parties": "Contract Parties",
       "signatures": "Digital Signatures",
-      "terms": "Terms and Conditions"
+      "terms": "Terms and Conditions",
+      "creator": "Contract Creator"
     },
     "create": {
       "title": "Create New Contract",
@@ -1184,6 +1224,61 @@
       "service_scope": "Service Scope",
       "timeline": "Timeline",
       "milestones": "Milestones"
+    },
+    "list": "Contract List",
+    "searchPlaceholder": "Search contracts...",
+    "filterByStatus": "Filter by status",
+    "generatePDF": "Generate PDF",
+    "pdfGenerationComingSoon": "PDF generation coming soon",
+    "deleteConfirm": "Are you sure you want to delete this contract?",
+    "createSuccess": "Contract created successfully",
+    "updateSuccess": "Contract updated successfully",
+    "deleteSuccess": "Contract deleted successfully",
+    "saveError": "Failed to save contract",
+    "deleteError": "Failed to delete contract",
+    "titleRequired": "Title is required",
+    "typeRequired": "Type is required",
+    "startDateRequired": "Start date is required",
+    "statusRequired": "Status is required",
+    "valueRequired": "Value is required",
+    "currencyRequired": "Currency is required",
+    "descriptionRequired": "Description is required",
+    "titlePlaceholder": "Enter contract title",
+    "typePlaceholder": "Select contract type",
+    "templatePlaceholder": "Select template",
+    "statusPlaceholder": "Select status",
+    "startDatePlaceholder": "Select start date",
+    "endDatePlaceholder": "Select end date",
+    "valuePlaceholder": "Enter contract value",
+    "currencyPlaceholder": "Select currency",
+    "descriptionPlaceholder": "Enter contract description",
+    "termsPlaceholder": "Enter contract terms",
+    "template": {
+      "management": "Template Management",
+      "create": "Create Template",
+      "edit": "Edit Template",
+      "delete": "Delete Template",
+      "name": "Template Name",
+      "type": "Template Type",
+      "description": "Template Description",
+      "content": "Template Content",
+      "status": "Template Status",
+      "variables": "Template Variables",
+      "searchPlaceholder": "Search templates...",
+      "deleteConfirm": "Are you sure you want to delete this template?",
+      "createSuccess": "Template created successfully",
+      "updateSuccess": "Template updated successfully",
+      "deleteSuccess": "Template deleted successfully",
+      "saveError": "Failed to save template",
+      "deleteError": "Failed to delete template",
+      "nameRequired": "Template name is required",
+      "typeRequired": "Template type is required",
+      "descriptionRequired": "Template description is required",
+      "contentRequired": "Template content is required",
+      "namePlaceholder": "Enter template name",
+      "typePlaceholder": "Select template type",
+      "descriptionPlaceholder": "Enter template description",
+      "contentPlaceholder": "Enter template content"
     }
   }
 } 
