--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1024,6 +1024,99 @@
       }
     }
   },
+  "notifications": {
+    "management": {
+      "title": "Notification Management",
+      "notifications": "Notifications",
+      "statistics": "Statistics", 
+      "preferences": "Preferences",
+      "templates": "Templates",
+      "sendNew": "Send New"
+    },
+    "list": {
+      "title": "Notifications",
+      "noNotifications": "No notifications found",
+      "selectCategory": "Select Category",
+      "unreadOnly": "Unread Only",
+      "showAll": "Show All",
+      "markAllAsRead": "Mark All as Read",
+      "markAllReadConfirm": "Are you sure you want to mark all notifications as read?",
+      "markReadSuccess": "Notification marked as read",
+      "markReadError": "Failed to mark notification as read",
+      "markAllReadSuccess": "All notifications marked as read",
+      "markAllReadError": "Failed to mark all notifications as read",
+      "viewDetails": "View Details"
+    },
+    "send": {
+      "title": "Send Notification",
+      "customNotification": "Custom Notification",
+      "templateNotification": "Template Notification",
+      "selectTemplate": "Select Template",
+      "selectTemplatePlaceholder": "Choose a notification template...",
+      "templateRequired": "Please select a template",
+      "templateVariables": "Template Variables",
+      "preview": "Preview",
+      "recipients": "Recipients",
+      "recipientsRequired": "Please select recipients",
+      "recipientsPlaceholder": "Enter user IDs (comma separated)",
+      "message": "Message",
+      "messageRequired": "Please enter a message",
+      "messagePlaceholder": "Enter your notification message...",
+      "category": "Category",
+      "selectCategory": "Select Category",
+      "priority": "Priority",
+      "selectPriority": "Select Priority",
+      "type": "Type",
+      "selectType": "Select Type",
+      "actionUrl": "Action URL",
+      "actionUrlPlaceholder": "https://example.com/action",
+      "scheduledAt": "Scheduled At",
+      "selectDateTime": "Select Date & Time",
+      "additionalData": "Additional Data",
+      "dataHelp": "Optional JSON data for the notification",
+      "sendNotification": "Send Notification",
+      "sendTemplateNotification": "Send Template Notification",
+      "success": "Notification sent successfully",
+      "error": "Failed to send notification",
+      "templateSuccess": "Template notification sent successfully",
+      "templateError": "Failed to send template notification",
+      "titleRequired": "Please enter a title",
+      "titlePlaceholder": "Enter notification title..."
+    },
+    "preferences": {
+      "title": "Notification Preferences",
+      "description": "Configure how you want to receive notifications for different categories",
+      "channels": "Delivery Channels",
+      "frequency": "Frequency",
+      "immediate": "Immediate",
+      "daily": "Daily Digest",
+      "weekly": "Weekly Digest",
+      "never": "Never",
+      "quietHoursEnabled": "Quiet Hours Enabled",
+      "quietHoursDisabled": "Quiet Hours Disabled",
+      "quietStart": "Quiet Hours Start",
+      "quietEnd": "Quiet Hours End",
+      "selectTime": "Select Time",
+      "save": "Save Preferences",
+      "saveSuccess": "Preferences saved successfully",
+      "saveError": "Failed to save preferences"
+    },
+    "stats": {
+      "title": "Notification Statistics",
+      "total": "Total Notifications",
+      "sent": "Sent",
+      "pending": "Pending",
+      "failed": "Failed",
+      "unread": "Unread",
+      "readRate": "Read Rate",
+      "successRate": "Success Rate",
+      "failureRate": "Failure Rate"
+    },
+    "templates": {
+      "title": "Notification Templates",
+      "description": "Manage reusable notification templates with dynamic variables"
+    }
+  },
   "contract": {
     "management": {
       "title": "Contract Management",
