--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -1024,6 +1024,99 @@
       }
     }
   },
+  "notifications": {
+    "management": {
+      "title": "Quản lý Thông báo",
+      "notifications": "Thông báo",
+      "statistics": "Thống kê", 
+      "preferences": "Cài đặt",
+      "templates": "Mẫu thông báo",
+      "sendNew": "Gửi mới"
+    },
+    "list": {
+      "title": "Thông báo",
+      "noNotifications": "Không tìm thấy thông báo",
+      "selectCategory": "Chọn danh mục",
+      "unreadOnly": "Chưa đọc",
+      "showAll": "Hiển thị tất cả",
+      "markAllAsRead": "Đánh dấu tất cả đã đọc",
+      "markAllReadConfirm": "Bạn có chắc muốn đánh dấu tất cả thông báo là đã đọc?",
+      "markReadSuccess": "Đã đánh dấu thông báo là đã đọc",
+      "markReadError": "Không thể đánh dấu thông báo là đã đọc",
+      "markAllReadSuccess": "Đã đánh dấu tất cả thông báo là đã đọc",
+      "markAllReadError": "Không thể đánh dấu tất cả thông báo là đã đọc",
+      "viewDetails": "Xem chi tiết"
+    },
+    "send": {
+      "title": "Gửi Thông báo",
+      "customNotification": "Thông báo tùy chỉnh",
+      "templateNotification": "Thông báo từ mẫu",
+      "selectTemplate": "Chọn mẫu",
+      "selectTemplatePlaceholder": "Chọn một mẫu thông báo...",
+      "templateRequired": "Vui lòng chọn một mẫu",
+      "templateVariables": "Biến mẫu",
+      "preview": "Xem trước",
+      "recipients": "Người nhận",
+      "recipientsRequired": "Vui lòng chọn người nhận",
+      "recipientsPlaceholder": "Nhập ID người dùng (cách nhau bằng dấu phẩy)",
+      "message": "Tin nhắn",
+      "messageRequired": "Vui lòng nhập tin nhắn",
+      "messagePlaceholder": "Nhập nội dung thông báo...",
+      "category": "Danh mục",
+      "selectCategory": "Chọn danh mục",
+      "priority": "Độ ưu tiên",
+      "selectPriority": "Chọn độ ưu tiên",
+      "type": "Loại",
+      "selectType": "Chọn loại",
+      "actionUrl": "URL hành động",
+      "actionUrlPlaceholder": "https://example.com/action",
+      "scheduledAt": "Lên lịch vào",
+      "selectDateTime": "Chọn ngày & giờ",
+      "additionalData": "Dữ liệu bổ sung",
+      "dataHelp": "Dữ liệu JSON tùy chọn cho thông báo",
+      "sendNotification": "Gửi thông báo",
+      "sendTemplateNotification": "Gửi thông báo từ mẫu",
+      "success": "Gửi thông báo thành công",
+      "error": "Không thể gửi thông báo",
+      "templateSuccess": "Gửi thông báo từ mẫu thành công",
+      "templateError": "Không thể gửi thông báo từ mẫu",
+      "titleRequired": "Vui lòng nhập tiêu đề",
+      "titlePlaceholder": "Nhập tiêu đề thông báo..."
+    },
+    "preferences": {
+      "title": "Cài đặt Thông báo",
+      "description": "Cấu hình cách bạn muốn nhận thông báo cho các danh mục khác nhau",
+      "channels": "Kênh gửi",
+      "frequency": "Tần suất",
+      "immediate": "Ngay lập tức",
+      "daily": "Tóm tắt hàng ngày",
+      "weekly": "Tóm tắt hàng tuần",
+      "never": "Không bao giờ",
+      "quietHoursEnabled": "Giờ im lặng được bật",
+      "quietHoursDisabled": "Giờ im lặng bị tắt",
+      "quietStart": "Bắt đầu giờ im lặng",
+      "quietEnd": "Kết thúc giờ im lặng",
+      "selectTime": "Chọn thời gian",
+      "save": "Lưu cài đặt",
+      "saveSuccess": "Lưu cài đặt thành công",
+      "saveError": "Không thể lưu cài đặt"
+    },
+    "stats": {
+      "title": "Thống kê Thông báo",
+      "total": "Tổng thông báo",
+      "sent": "Đã gửi",
+      "pending": "Đang chờ",
+      "failed": "Thất bại",
+      "unread": "Chưa đọc",
+      "readRate": "Tỷ lệ đã đọc",
+      "successRate": "Tỷ lệ thành công",
+      "failureRate": "Tỷ lệ thất bại"
+    },
+    "templates": {
+      "title": "Mẫu Thông báo",
+      "description": "Quản lý các mẫu thông báo có thể tái sử dụng với biến động"
+    }
+  },
   "contract": {
     "management": {
       "title": "Quản lý hợp đồng",
