--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -407,6 +407,10 @@
     "uploadDocument": "Upload Document",
     "uploadSuccess": "Document uploaded successfully",
     "uploadFailed": "Failed to upload document",
+    "editDocument": "Edit Document",
+    "updateDocument": "Update Document",
+    "updateSuccess": "Document updated successfully",
+    "updateFailed": "Failed to update document",
     "uploading": "Uploading...",
     "pleaseSelectFile": "Please select a file to upload",
     "dragAndDrop": "Click or drag file to this area to upload",
@@ -417,6 +421,8 @@
     "titleRequired": "Please enter document title",
     "categoryRequired": "Please select a category",
     "selectCategory": "Select category",
+    "statusRequired": "Please select a status",
+    "selectStatus": "Select status",
     "selectProject": "Select project",
     "addTag": "Add tag",
     "file": "File",
@@ -469,6 +475,7 @@
     "failedToUploadVersion": "Failed to upload version",
     "versionDeleted": "Version deleted successfully",
     "failedToDeleteVersion": "Failed to delete version",
+    "failedToLoadVersions": "Failed to load versions",
     "versionRestored": "Version restored successfully",
       "failedToRestoreVersion": "Failed to restore version",
     "currentVersion": "Current Version",
