--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -404,6 +404,10 @@
     "uploadDocument": "Tải lên tài liệu",
     "uploadSuccess": "Tải lên tài liệu thành công",
     "uploadFailed": "Tải lên tài liệu thất bại",
+    "editDocument": "Chỉnh sửa tài liệu",
+    "updateDocument": "Cập nhật tài liệu",
+    "updateSuccess": "Cập nhật tài liệu thành công",
+    "updateFailed": "Cập nhật tài liệu thất bại",
     "uploading": "Đang tải lên...",
     "pleaseSelectFile": "Vui lòng chọn file để tải lên",
     "dragAndDrop": "Click hoặc kéo file vào đây để tải lên",
@@ -414,6 +418,8 @@
     "titleRequired": "Vui lòng nhập tiêu đề tài liệu",
     "categoryRequired": "Vui lòng chọn danh mục",
     "selectCategory": "Chọn danh mục",
+    "statusRequired": "Vui lòng chọn trạng thái",
+    "selectStatus": "Chọn trạng thái",
     "selectProject": "Chọn dự án",
     "addTag": "Thêm tag",
     "file": "File",
@@ -466,6 +472,7 @@
     "failedToUploadVersion": "Tải lên phiên bản thất bại",
     "versionDeleted": "Xóa phiên bản thành công",
     "failedToDeleteVersion": "Xóa phiên bản thất bại",
+    "failedToLoadVersions": "Tải danh sách phiên bản thất bại",
     "versionRestored": "Khôi phục phiên bản thành công",
     "failedToRestoreVersion": "Khôi phục phiên bản thất bại",
     "currentVersion": "Phiên bản hiện tại",
