--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -477,10 +477,23 @@
     "failedToDeleteVersion": "Failed to delete version",
     "failedToLoadVersions": "Failed to load versions",
     "versionRestored": "Version restored successfully",
-      "failedToRestoreVersion": "Failed to restore version",
+    "failedToRestoreVersion": "Failed to restore version",
     "currentVersion": "Current Version",
     "versionDetails": "Version Details",
-    "failedToLoadVersions": "Failed to load versions",
+    "failedToLoadShares": "Failed to load shared users",
+    "failedToSearchUsers": "Failed to search users",
+    "documentShared": "Document shared successfully",
+    "failedToShareDocument": "Failed to share document",
+    "permissionUpdated": "Permission updated successfully",
+    "failedToUpdatePermission": "Failed to update permission",
+    "shareRemoved": "Share removed successfully",
+    "failedToRemoveShare": "Failed to remove share",
+    "linkCopied": "Link copied to clipboard",
+    "changeLogRequired": "Change log is required",
+    "changeLogPlaceholder": "Describe what changed in this version...",
+    "uploadNewVersion": "Upload New Version",
+    "dragAndDrop": "Click or drag file to this area to upload",
+    "uploadHint": "Support for PDF, DOC, DOCX, XLS, XLSX, TXT files",
     "shareDocument": "Share Document",
     "share": "Share",
     "publicLink": "Public Link",
