--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -477,7 +477,20 @@
     "failedToRestoreVersion": "Khôi phục phiên bản thất bại",
     "currentVersion": "Phiên bản hiện tại",
     "versionDetails": "Chi tiết phiên bản",
-    "failedToLoadVersions": "Tải lịch sử phiên bản thất bại",
+    "failedToLoadShares": "Tải danh sách người được chia sẻ thất bại",
+    "failedToSearchUsers": "Tìm kiếm người dùng thất bại",
+    "documentShared": "Chia sẻ tài liệu thành công",
+    "failedToShareDocument": "Chia sẻ tài liệu thất bại",
+    "permissionUpdated": "Cập nhật quyền thành công",
+    "failedToUpdatePermission": "Cập nhật quyền thất bại",
+    "shareRemoved": "Hủy chia sẻ thành công",
+    "failedToRemoveShare": "Hủy chia sẻ thất bại",
+    "linkCopied": "Đã sao chép link vào clipboard",
+    "changeLogRequired": "Bắt buộc nhập mô tả thay đổi",
+    "changeLogPlaceholder": "Mô tả những gì đã thay đổi trong phiên bản này...",
+    "uploadNewVersion": "Tải lên phiên bản mới",
+    "dragAndDrop": "Nhấp hoặc kéo thả file vào khu vực này để tải lên",
+    "uploadHint": "Hỗ trợ file PDF, DOC, DOCX, XLS, XLSX, TXT",
     "shareDocument": "Chia sẻ tài liệu",
     "share": "Chia sẻ",
     "publicLink": "Liên kết công khai",
