--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -105,7 +105,13 @@
     },
     "description": "Description",
     "no_description": "No description",
-    "dashboard": "Dashboard"
+    "dashboard": "Dashboard",
+    "showing": "Showing",
+    "of": "of",
+    "items": "items",
+    "justNow": "Just now",
+    "hoursAgo": "{{count}} hours ago",
+    "minutesAgo": "{{count}} minutes ago"
   },
   "finance": {
     "title": "Finance",
@@ -370,9 +376,14 @@
   },
   "calendar": {
     "title": "Calendar",
-    "description": "Manage and view all your events, meetings, and schedules in one place",
-    "editEvent": "Edit Event",
-    "eventDetails": "Event Details",
+    "description": "Manage your events, meetings, and important dates",
+    "createEvent": "Create Event",
+    "stats": {
+      "totalEvents": "Total Events",
+      "upcomingEvents": "Upcoming Events",
+      "completedEvents": "Completed Events",
+      "overdueEvents": "Overdue Events"
+    },
     "allDay": "All Day",
     "previous": "Previous",
     "next": "Next",
@@ -384,21 +395,8 @@
     "date": "Date",
     "time": "Time",
     "event": "Event",
-    "noEventsInRange": "No events in this date range",
-    "showMore": "Show more {{total}}",
-    "eventTitle": "Title",
-    "eventDescription": "Description",
-    "location": "Location",
-    "type": "Type",
-    "status": "Status",
-    "meeting": "Meeting",
-    "task": "Task",
-    "reminder": "Reminder",
-    "other": "Other",
-    "scheduled": "Scheduled",
-    "ongoing": "Ongoing",
-    "completed": "Completed",
-    "cancelled": "Cancelled"
+    "noEventsInRange": "No events in this range",
+    "showMore": "Show {{total}} more"
   },
   "documents": {
     "title": "Documents",
@@ -1119,7 +1117,8 @@
       "selectTime": "Select Time",
       "save": "Save Preferences",
       "saveSuccess": "Preferences saved successfully",
-      "saveError": "Failed to save preferences"
+      "saveError": "Failed to save preferences",
+      "noPreferences": "No preferences found. Creating default preferences..."
     },
     "stats": {
       "title": "Notification Statistics",
@@ -1134,7 +1133,36 @@
     },
     "templates": {
       "title": "Notification Templates",
-      "description": "Manage reusable notification templates with dynamic variables"
+      "description": "Manage reusable notification templates with dynamic variables",
+      "name": "Name",
+      "category": "Category",
+      "channels": "Channels",
+      "priority": "Priority",
+      "status": "Status",
+      "actions": "Actions",
+      "create": "Create Template",
+      "edit": "Edit Template",
+      "view": "View",
+      "copy": "Copy",
+      "send": "Send",
+      "delete": "Delete",
+      "deleteConfirm": "Are you sure you want to delete this template?",
+      "active": "Active",
+      "inactive": "Inactive",
+      "type": "Type",
+      "titleTemplate": "Title Template",
+      "messageTemplate": "Message Template",
+      "nameRequired": "Name is required",
+      "categoryRequired": "Category is required",
+      "typeRequired": "Type is required",
+      "titleTemplateRequired": "Title template is required",
+      "messageTemplateRequired": "Message template is required",
+      "channelsRequired": "Channels are required",
+      "priorityRequired": "Priority is required",
+      "createSuccess": "Template created successfully",
+      "updateSuccess": "Template updated successfully",
+      "deleteSuccess": "Template deleted successfully",
+      "saveError": "Failed to save template"
     }
   },
   "contract": {
