--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1421,5 +1421,29 @@
       "descriptionPlaceholder": "Enter template description",
       "contentPlaceholder": "Enter template content"
     }
+  },
+  "chat": {
+    "conversations": "Conversations",
+    "newConversation": "New",
+    "searchConversations": "Search conversations...",
+    "noMessages": "No messages yet",
+    "justNow": "Just now",
+    "yesterday": "Yesterday",
+    "noConversationsFound": "No conversations found",
+    "noConversations": "No conversations yet",
+    "members": "members",
+    "online": "online",
+    "deleteConfirmTitle": "Delete Conversation",
+    "deleteConfirmContent": "Are you sure you want to delete this conversation? This action cannot be undone.",
+    "deleteSuccess": "Conversation deleted successfully",
+    "deleteError": "Failed to delete conversation",
+    "message": {
+      "delete": "Delete message",
+      "addReaction": "Add reaction",
+      "deleteConfirmTitle": "Delete Message",
+      "deleteConfirmContent": "Are you sure you want to delete this message? This action cannot be undone.",
+      "deleteSuccess": "Message deleted successfully",
+      "deleteError": "Failed to delete message"
+    }
   }
 } 
